Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/de/messages.json
+++ b/platform/mv3/extension/_locales/de/messages.json
@@ -232,7 +232,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLabel": {
-    "message": "Stricktes Blockieren aktivieren",
+    "message": "Striktes Blockieren aktivieren",
     "description": "Label for a checkbox in the options page"
   },
   "enableStrictBlockLegend": {
